# ipc-pipe

./: .gitignore  CMakeLists.txt  README.adoc  main.cpp  object_pipe.cpp  object_pipe.h  pipe_listener.cpp  pipe_listener.h  pipe_test.cpp  stat.cpp  stat.h
